src/angular/planit/src/assets/sass/components/_header-primary.scss
.header-primary {
  background-color: $brand-black;
  display: block;
  min-height: 6rem;
  padding: $space-small $space-xlarge;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  align-items: center;

  @media (max-width: 40rem) {
    flex-flow: column nowrap;

    > * {
      margin: .8rem 0;
    }
  }

  .logo {
    padding: 0;
    line-height: 0;
    border: 0;
    overflow: hidden;
    text-decoration: none;

    > img {
      width: 22rem;
      height: 4.2rem;
    }
  }

  .nav-buttons {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;

    > * {
      margin-left: $space-base;
    }

    .button {
      font-size: 1.8rem;
      padding-top: $button-padding-vertical-small;
      padding-bottom: $button-padding-vertical-small;
      flex: 0 0 auto;
    }
  }
}

.banner {
  background-color: $upgrade-banner-background;
  color: $upgrade-banner-font-color;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: $space-base $space-xxlarge;

  @media (max-width: 37.5rem) {
    font-size: $text-tiny;
  }

  .button {
    margin-left: $space-xxlarge;
  }
}

.user-dropdown {
  position: relative;

  .button-profile {
    display: flex;
    align-items: center;
    justify-content: space-between;
    min-height: 4rem;
    padding: 0.3rem $button-padding-horizontal-small;

    .icon-user-circle {
      font-size: $text-medium;
    }

    [class*=icon-chevron] {
      font-size: $text-tiny;
    }
  }

  .dropdown-menu {
    min-width: 25rem;
    border-color: $neutral-2;

    li:not(.divider):not(.profile-info):hover {
      background: none;
      color: inherit;
    }

    li > * {
      padding-top: 0;
      padding-bottom: 0;
    }

    .profile-info {
      margin: -$dropdown-menu-border-padding 0 (-$space-medium);
      padding: $dropdown-menu-border-padding 0 $space-medium;
      background-color: $neutral-1;
      border-radius: 0;
      color: $neutral-5;
      line-height: 1.4;

      .name {
        font-weight: $font-weight-bold;
      }
    }

    a {
      line-height: 2;

      &:focus,
      &:hover,
      &:active {
        color: $dropdown-menu-link-color-hover;
        background-color: $dropdown-menu-link-background-hover;
      }
    }
  }

  &.open .button-profile {
    background-color: adjust-color($brand-teal, $lightness: lightness($brand-teal) * -.5);
  }
}

